--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="hero-context">Lorem ipsum dolor sit amet consectetur adipisicing elit. In magnam ipsam consectetur perferendis hic quos praesentium ab quis laborum, minus doloribus temporibus voluptate ratione perspiciatis consequatur! Delectus neque tempore eveniet?</div>
                     <button class="sign-up">Sign up</button>
                 </div>
-                <div class="hero-img"><img src="" alt=""></div>
+                <div class="hero-img"><img class="hero-image" src="https://media.istockphoto.com/id/1438786786/photo/silhouettes-of-a-latin-couple-sitting-on-the-top-of-the-hill-looking-at-shooting-stars-and.jpg?s=2048x2048&w=is&k=20&c=HeCVkRikpzGmNsq-KHjR7X2Ad9raGfCpFHW1JQvJLE4=" alt=""></div>
             </div>
         </div>
 
@@ -31,19 +31,19 @@
             <div class="info-title">Some random information</div>
             <div class="info-contents">
                 <div class="info-content">
-                    <div class="info-image"><img src="" alt=""></div>
+                    <div class=""><img class="info-image" src="https://cdn.pixabay.com/photo/2016/04/30/08/35/aircraft-1362586_1280.jpg" alt=""></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam asperiores magni, officiis voluptas ducimus iste, architecto temporibus at debitis.</p>
                 </div>
                 <div class="info-content">
-                    <div class="info-image"><img src="" alt=""></div>
+                    <div class=""><img class="info-image" src="https://cdn.pixabay.com/photo/2019/06/04/21/53/airplane-4252410_1280.jpg" alt=""></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam asperiores magni, officiis voluptas ducimus iste, architecto temporibus at debitis.</p>
                 </div>
                 <div class="info-content">
-                    <div class="info-image"><img src="" alt=""></div>
+                    <div class=""><img class="info-image" src="https://cdn.pixabay.com/photo/2013/04/11/19/46/building-102840_1280.jpg" alt=""></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam asperiores magni, officiis voluptas ducimus iste, architecto temporibus at debitis.</p>
                 </div>
                 <div class="info-content">
-                    <div class="info-image"><img src="" alt=""></div>
+                    <div class=""><img class="info-image" src="https://media.istockphoto.com/id/1176026538/photo/aurora-at-iceland.jpg?s=2048x2048&w=is&k=20&c=SSW7qQ8xGlWcKWmo0XjJLzJUk4X4AsjhnM0WZFpfdlM=" alt=""></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam asperiores magni, officiis voluptas ducimus iste, architecto temporibus at debitis.</p>
                 </div>
             </div>
